--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -8,7 +8,7 @@
 
   <!--lien feuile de style-->
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap" rel="stylesheet">
 
@@ -61,7 +61,7 @@
                     <p>Votre commande est passée avec succès!</p>
                     <p><strong> Merci pour votre commande <span id="Namecommande"></span>.</strong></p><br>
                     <p><strong>TOTAL COMMANDE : </strong><span id="Prixcommande"></span> euros.</p><br>
-                    <p>Votre commande est en cours de traitement.<strong>Elle est en cours de préparation par nos services!</strong></p>
+                    <p>Votre commande est en cours de traitement.<strong> Elle est en cours de préparation par nos services!</strong></p>
                     <p>Nous avons le plaisir de vous confirmer que votre commande a été expédié! Nous vous informerons par e-mail le cheminement de votre commande</p>
                          <strong>commande n° <span id="Idcommande"></strong></span></p><br>
 
