--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,7 +8,7 @@
 
   <!--lien feuille de style-->
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap" rel="stylesheet">
 
@@ -31,7 +31,7 @@
   <nav class="navbar navbar-light bg-orinoco">
     <div class="container-fluid">
       <a class="navbar-brand" href="#">
-        <img src= "backend/images/logo orinoco.png" alt="Photo logo Orinoco" width="200" height="100"
+        <img src= "img/logo orinoco.png" alt="Photo logo Orinoco" width="200" height="100"
           class=" w-100 d-inline-block align-text-top">
       </a>
       <nav class="navbar navbar-light bg-orinoco">
@@ -57,7 +57,7 @@
     <div class="row row-cols-1 row-cols-md-2 g-4 w-75 mx-auto">
       <div class="col">
         <div class="card">
-          <img src="backend/images/teddy_1.jpg" class="card-img-top"  alt="..." width="100" height="200">
+          <img src="img/teddy_1.jpg" class="card-img-top"  alt="..." width="100" height="200">
           <div class="card-body">
             <h5 class="card-title">Teddy bear brown </h5>
             <p class="card-text">10€</p>
@@ -69,7 +69,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="backend/images/teddy_2.jpg" class="card-img-top" alt="..." width="100" height="200">
+          <img src="img/teddy_2.jpg" class="card-img-top" alt="..." width="100" height="200">
           <div class="card-body">
             <h5 class="card-title">Teddy bear beige</h5>
             <p class="card-text">10€</p>
@@ -81,7 +81,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="backend/images/teddy_3.jpg" class="card-img-top" alt="..." width="100" height="200">
+          <img src="img/teddy_3.jpg" class="card-img-top" alt="..." width="100" height="200">
           <div class="card-body">
             <h5 class="card-title">Teddy's bear's double</h5>
             <p class="card-text">15€</p>
@@ -93,7 +93,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="backend/images/teddy_4.jpg" class="card-img-top" alt="..." width="100" height="200">
+          <img src="img/teddy_4.jpg" class="card-img-top" alt="..." width="100" height="200">
           <div class="card-body">
             <h5 class="card-title">Teddy camel</h5>
             <p class="card-text">10€</p>
@@ -105,7 +105,7 @@
       </div>
       <div class="col">
         <div class="card">
-          <img src="backend/images/teddy_5.jpg" class="card-img-top" alt="..." width="100" height="200">
+          <img src="img/teddy_5.jpg" class="card-img-top" alt="..." width="100" height="200">
           <div class="card-body">
             <h5 class="card-title">Teddy baby</h5>
             <p class="card-text">9€</p>
