--- a/frontend/produit.html
+++ b/frontend/produit.html
@@ -8,7 +8,7 @@
 
   <!--lien feuille de style-->
 
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="css/style.css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@100;400;700&display=swap" rel="stylesheet">
 
