--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -25,67 +25,79 @@
 
 <body>
 
-<!--header-->
+  <!--header-->
 
-<header>
-    <div class="container-fluid-nav">
-        <nav class="col navbar navbar-expand d-flex justify-content-around">
-            <a class="navbar-brand" href="index.html"></i> Orinoco</a>
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Shop</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link" href="panier.html"></i> Panier (<span id="Numberarticle"></span>)</a>
-                </li>
-            </ul>
+  <header>
+    <nav class="navbar navbar-light bg-orinoco">
+      <div class="container-fluid">
+        <a class="navbar-brand" href="#">
+          <img src= "img/logo orinoco.png" alt="Photo logo Orinoco" width="200" height="100" class=" w-100 d-inline-block align-text-top">
+        </a>
+        <nav class="navbar navbar-light bg-orinoco">
+          <form class="container-fluid justify-content-start">
+            <div class="btn-group">
+              <a href="index.html" class="btn btn-primary active" aria-current="page">Accueil</a>
+              <a href="panier.html" class="btn btn-primary">Panier</a>
+            </div> 
+          </form>
         </nav>
-    </div>
-</header>
+      </div>
+    </nav>
+  </header>
 
-<!--main-->
 
-<main class="Mainconfirmation">
-    <div class="container" id="Containerconfirmation">
-        <div class="row">
-            <div class="col">
-                <h1 class="text-center" id="h1confirmation"> CONFIRMATION DE VOTRE COMMANNDE !</h1>
-            </div>
-        </div>
-        <div class="row">
-            <div class="col">
+  <!--main-->
 
-                <!--confirmation commande & remerciements-->
 
-                <div id="Sectionconfirmation">
-                    <p>Votre commande est passée avec succès!</p>
-                    <p><strong> Merci pour votre commande <span id="Namecommande"></span>.</strong></p><br>
-                    <p><strong>TOTAL COMMANDE : </strong><span id="Prixcommande"></span> euros.</p><br>
-                    <p>Votre commande est en cours de traitement.<strong> Elle est en cours de préparation par nos services!</strong></p>
-                    <p>Nous avons le plaisir de vous confirmer que votre commande a été expédié! Nous vous informerons par e-mail le cheminement de votre commande</p>
-                         <strong>commande n° <span id="Idcommande"></strong></span></p><br>
-
-                    <p>Merci de nous avoir accorder votre confiance <br> L'équipe Orinoco</p>
-                </div>
-            </div>
-        </div>
-    </div>     
+<main>
+  <h2>Votre commande est passée avec succès</h2>
+    <p>Votre n° de commande est le : <span id="orderId"></span></p>
+    <p>Le prix total est de : <span id="totalPrice"></span>€</p>
+    <p>L'équipe Orinoco vous remercie pour votre commande. A bientôt !</p>
 </main>
-    <footer id="footer" class="container-fluid mt-auto bg-orinoco">
-        <div class="row p-2 my-1">
-          <div class="col-12">
-            <div class="text-center my-auto">
-    
-            <!--infos entreprise-->
 
-              <a href="#" class="text-decoration-none text-body">À propos de nous</a>
-              <span class="mx-2">.</span>
-              <a href="#" class="text-decoration-none text-body">Confidentialité</a>
-              <span class="mx-2">.</span>
-              <a href="#" class="text-decoration-none text-body">Conditions Générales</a>
-            </div>
+
+
+<!--essaie-->
+  <!-- <main class="Mainconfirmation">
+    <div class="container" id="Containerconfirmation">
+      <div class="row">
+        <div class="col">
+          <h1 class="text-center" id="h1confirmation"> CONFIRMATION DE VOTRE COMMANNDE !</h1>
+        </div>
+      </div>
+      <div class="row">
+        <div class="col"> -->
+          <!--confirmation commande & remerciements-->
+          <!-- <div id="Sectionconfirmation">
+            <p>Votre commande est passée avec succès!</p>
+            <p><strong> Merci pour votre commande <span id="Namecommande"></span>.</strong></p><br>
+            <p><strong>TOTAL COMMANDE : </strong><span id="Prixcommande"></span> euros.</p><br>
+            <p>Votre commande est en cours de traitement.<strong> Elle est en cours de préparation par nos services!</strong></p>
+            <p>Nous avons le plaisir de vous confirmer que votre commande a été expédié! Nous vous informerons par e-mail le cheminement de votre commande</p>
+            <strong>commande n° <span id="Idcommande"></strong></span><br>
+            <p>Merci de nous avoir accorder votre confiance <br> L'équipe Orinoco</p>
           </div>
-      </footer>
-    </body>
-    
-    </html>
+        </div>
+      </div>
+    </div>     
+  </main> -->
+
+  <!--footer-->
+  <footer id="footer" class="container-fluid mt-auto bg-orinoco">
+    <div class="row p-2 my-1">
+      <div class="col-12">
+        <div class="text-center my-auto">
+          <!--infos entreprise-->
+          <a href="#" class="text-decoration-none text-body">À propos de nous</a>
+          <span class="mx-2">.</span>
+          <a href="#" class="text-decoration-none text-body">Confidentialité</a>
+          <span class="mx-2">.</span>
+          <a href="#" class="text-decoration-none text-body">Conditions Générales</a>
+        </div>
+      </div>
+    </div>
+  </footer>  
+  <script src="JS/confirmation.js"></script>
+</body>    
+</html>
