confirmation.html correction

--- a/frontend/confirmation.html
+++ b/frontend/confirmation.html
@@ -46,42 +46,28 @@
   </header>
 
 
-  <!--main-->
+  <!--main--> 
 
-
-<main>
-  <h2>Votre commande est passée avec succès</h2>
-    <p>Votre n° de commande est le : <span id="orderId"></span></p>
-    <p>Le prix total est de : <span id="totalPrice"></span>€</p>
-    <p>L'équipe Orinoco vous remercie pour votre commande. A bientôt !</p>
-</main>
-
-
-
-<!--essaie-->
-  <!-- <main class="Mainconfirmation">
+  <main>
     <div class="container" id="Containerconfirmation">
       <div class="row">
-        <div class="col">
-          <h1 class="text-center" id="h1confirmation"> CONFIRMATION DE VOTRE COMMANNDE !</h1>
-        </div>
+          <div class="col">
+              <h1 class="text-center" id="h1confirmation">C'est dans la boîte !</h1>
+          </div>
       </div>
       <div class="row">
-        <div class="col"> -->
-          <!--confirmation commande & remerciements-->
-          <!-- <div id="Sectionconfirmation">
-            <p>Votre commande est passée avec succès!</p>
-            <p><strong> Merci pour votre commande <span id="Namecommande"></span>.</strong></p><br>
-            <p><strong>TOTAL COMMANDE : </strong><span id="Prixcommande"></span> euros.</p><br>
-            <p>Votre commande est en cours de traitement.<strong> Elle est en cours de préparation par nos services!</strong></p>
-            <p>Nous avons le plaisir de vous confirmer que votre commande a été expédié! Nous vous informerons par e-mail le cheminement de votre commande</p>
-            <strong>commande n° <span id="Idcommande"></strong></span><br>
-            <p>Merci de nous avoir accorder votre confiance <br> L'équipe Orinoco</p>
+        <div class="col">
+          <div id="Sectionconfirmation">
+            <p><strong>🙏️ Merci, C'est parti, on vous prépare ça ✨️<span id="nameCommande"></span>.</strong></p><br>
+            <p><strong>TOTAL COMMANDE : </strong><span id="totalPrice"></span> euros.</p><br>
+            <p>Vous ne pouvez plus modifier ou annuler cette commande, mais <strong>soyez tranquille !</strong> Votre commande a été transmise et nous vous informerons par e–mail de son expédition.<br></p>            
+            <p>Nous avons le plaisir de confirmer votre <strong>commande n° <span id="orderId"></strong></span></p><br>
+            <p>Un grand merci pour la confiance que vous nous accordez <strong>🏋️#prenezsoindevous</strong><br>L'équipe Orinoco</p>
           </div>
         </div>
       </div>
-    </div>     
-  </main> -->
+    </div>    
+  </main>
 
   <!--footer-->
   <footer id="footer" class="container-fluid mt-auto bg-orinoco">
